// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`disarm target should be disarmed if initiator has more dex 1`] = `
"*Игрок 2* использовал _🥊 Обезоруживание_ на *Игрок 1*
\\[ 📖20 ]
*Игрок 1* пытался атаковать *Игрок 2*, но у него не получилось
_🥊 Обезоруживание_ *Игрок 2*: 📖0"
`;

exports[`disarm target should not be disarmed if initiator has less dex 1`] = `
"*Игрок 2* пытался использовать умение _🥊 Обезоруживание_, но у него не вышло
*Игрок 1* рубанул *Игрок 2* _Оружием_ и нанёс *7.2* урона
\\[ Игрок 2 💥 💔-7.2/0.8 📖58 ]"
`;

exports[`disarm should handle several casters 1`] = `
"*Игрок 2* использовал _🥊 Обезоруживание_ на *Игрок 1*
\\[ 📖20 ]
*Игрок 3* использовал _🥊 Обезоруживание_ на *Игрок 1*
\\[ 📖20 ]
*Игрок 1* пытался атаковать *Игрок 2*, но у него не получилось
_🥊 Обезоруживание_ *Игрок 2*: 📖0
_🥊 Обезоруживание_ *Игрок 3*: 📖0"
`;
